--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.display{
+
+.display {
     margin: auto;
     display: flex;
     height: 100vh;
@@ -13,13 +14,15 @@
     align-items: center;
     gap: 25px;
 }
-.choices{
+
+.choices {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 35px;
 }
-button{
+
+button {
     width: 175px;
     height: 145px;
     font-size: larger;
@@ -29,18 +32,19 @@ button{
     border-right-width: 3.5px;
     border-radius: 5px;
 }
-button:hover{
+
+button:hover {
     background-color: rgb(80, 126, 255);
-    }
-.result{
+}
+
+.resultContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 275px;
     height: 175px;
     border: solid black;
     border-bottom-width: 3.5px;
     border-right-width: 3.5px;
-    background-color:white;
+    background-color: white;
     border-radius: 5px;
-    justify-content: center;
 }
